# yolov8-openvino

./: .gitignore  CMakeLists.txt  README.md  ov_yolov8.cpp  yolov8n.xml
include/: ov_yolov8.h
